# justsync

./: .gitignore  LICENSE.txt  README.md  setup.cfg  test.py
justsync/: __init__.py  __main__.py  synchronizer.py  syncroot.py
