
[metadata]
name = justsync
version = 0.1
author = Michael S. Brown
#url =
description = Sync a set of local directories with each other.
long_description = file: README.md
license = MIT
classifiers=
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Archiving :: Mirroring


packages=justsync
zip_safe=True

[options.entry_points]
console_scripts =
    justsync = justsync.__main__:main

[options.extras_require]
watch = watchdog
